<resources>
    <string name="app_name">eWallet</string>
    <string name="welcome_message">Welcome to eWallet. Please use form below to star app, or use Register buttton to create new instance.</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="Logo_name">Logo</string>
    <string name="account_number">account number with *</string>
    <string name="bank_account_name">Bank Account</string>
    <string name="register_text">Please fill the form to continue.</string>
    <string name="Popup_msg">Inncorect Email or Password</string>
    <string name="input_your_email">input your email</string>
    <string name="input_your_email_again">input your email again.</string>
    <string name="set_up_password">set up password</string>
    <string name="repeat_password">repeat password</string>
    <string name="title_activity_main_activitytest">MainActivitytest</string>
    <string name="title_activity_main_hub">MainHub</string>
    <string name="accountnumber">Account Number</string>
    <string name="addCardButton">Add Card</string>
    <string name="acountname">Name on a Card</string>
</resources>
